# GlusterFS

./: Makefile  Makefile.in  README.md  VERSION  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  errmake  errorlog  glusterfs-api.pc  glusterfs.spec  libgfchangelog.pc  libgfdb.pc  libtool  ！
api/: Makefile  Makefile.in
api/examples/: Makefile  Makefile.in
api/src/: Makefile  Makefile.in  api.la  glfs-fops.lo  glfs-handleops.lo  glfs-master.lo  glfs-mgmt.lo  glfs-resolve.lo  glfs.lo  libgfapi.la
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
cli/: Makefile  Makefile.in
cli/src/: Makefile  Makefile.in  cli-cmd-volume.c  cli-rpc-ops.c  cli-xml-output.c  cli.h  gluster
contrib/argp-standalone/: Makefile.in  aclocal.m4  configure
contrib/fuse-util/: Makefile  Makefile.in  fusermount-glusterfs
doc/: Makefile  Makefile.in
events/: Makefile  Makefile.in
extras/: Makefile  Makefile.in
geo-replication/: Makefile  Makefile.in
glusterfsd/: Makefile  Makefile.in
heal/: Makefile  Makefile.in
libglusterfs/: Makefile  Makefile.in
mtcp/: Makefile  Makefile.in  config.status  configure  include  lib
mtcp.bak/: Makefile
rpc/: Makefile
rpc.bak/: Makefile.in
rpc.bak/rpc-transport/dpdk/src/: Makefile.am  dpdk.c  dpdk.conf  dpdk.h
rpc.bak/rpc-transport/dpdk/src/.deps/: name.Plo
rpc.bak/rpc-transport/dpdk/src/.libs/: dpdk.la  dpdk.lai  dpdk.soT
rpc.bak/rpc-transport/dpdk/src/config/: arp.conf  route.conf
tests/: env.rc
tools/: Makefile  Makefile.in
xlators/: Makefile  Makefile.in
(+1598 files in other folders)
